kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dscribeapi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dscribeapi
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dscribeapi
    spec:
      containers:
      - env:
        - name: EfProvider
          value: PostgreSql
        - name: ASPNETCORE_URLS
          value: http://*:5000
        - name: GlobalConfiguration__ImplementationsDirectory
          value: /var/dscribe
        - name: GlobalConfiguration__TempDirectory
          value: /var/dscribe/temp
        image: registry.gitlab.com/yourgroup/yourproject:api.0.1
        imagePullPolicy: IfNotPresent
        name: dscribeapi
        ports:
        - containerPort: 5000
          name: http
        readinessProbe:
          httpGet:
            path: /api/AppManagement/GetAppInstancesInfoForHome
            port: 5000
        resources:
          limits:
            cpu: 750m
            memory: 500M
          requests:
            cpu: 150m
            memory: 300M
      imagePullSecrets:
      - name: regcred
