kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dscribeapi
  name: dscribeapi
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: dscribeapi
  type: ClusterIP
