kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # Uncomment the next line and the lines at the end to enable SSL
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: dscribeapi
  namespace: default
spec:
  rules:
  - host: yourdomain.com
    http:
      paths:
      - backend:
          serviceName: dscribeapi
          servicePort: 5000
        path: /dscribeapi(/|$)(.*)
  # tls:
  # - hosts:
  #   - yourdomain.com
  #   secretName: echo-tls-preview
